--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,13 @@
   publish   = "_site"
   functions = "netlify/functions"
 
+[functions]
+  node_bundler = "esbuild"   # ensures JSON imports work
+
 [[redirects]]
   from = "/api/jokers"
   to   = "/.netlify/functions/jokers"
   status = 200
+
+[build.environment]
+  NODE_VERSION = "20"
