--- a/netlify.toml
+++ b/netlify.toml
@@ -11,5 +11,10 @@
   to   = "/.netlify/functions/jokers"
   status = 200
 
+[[redirects]]
+  from = "/api/stickers"
+  to   = "/.netlify/functions/stickers"
+  status = 200
+
 [build.environment]
   NODE_VERSION = "20"
